Adding no_rocm tags to multigpu tests that fail.

--- a/tensorflow/python/distribute/BUILD
+++ b/tensorflow/python/distribute/BUILD
@@ -620,6 +620,7 @@ distribute_py_test(
     shard_count = 10,
     tags = [
         "multi_and_single_gpu",
+	"no_rocm", #TODO Steven I Reeves Fails 2gpu
     ],
     tpu_tags = [
         "no_oss",
@@ -971,6 +972,7 @@ cuda_py_test(
     python_version = "PY3",
     tags = [
         "multi_and_single_gpu",
+	"no_rocm", # TODO Steven I Reeves fails 2GPU
     ],
     deps = [
         ":combinations",
@@ -1413,6 +1415,7 @@ distribute_py_test(
     shard_count = 5,
     tags = [
         "multi_and_single_gpu",
+	"no_rocm", #TODO Steven I Reeves fails 2gpu
     ],
     tpu_tags = [
         "no_oss",  # Target too big to run serially reliably.
@@ -1568,6 +1571,7 @@ distribute_py_test(
     main = "metrics_v1_test.py",
     tags = [
         "multi_and_single_gpu",
+	"no_rocm", #TODO Steven I Reeves fails 2gpu
     ],
     deps = [
         ":combinations",
@@ -1602,6 +1606,7 @@ cuda_py_test(
     tags = [
         "multi_and_single_gpu",
         "nomsan",  # b/154224457: Re-enable when fixed.
+	"no_rocm", # TODO Steven I Reeves fails xla_2gpu
     ],
     # b/155301154 broken with XLA:GPU
     xla_enable_strict_auto_jit = True,
@@ -1645,6 +1650,7 @@ cuda_py_test(
     python_version = "PY3",
     tags = [
         "multi_and_single_gpu",
+	"no_rocm", #TODO Steven I Reeves Fails 2gpu
     ],
     # b/141096229: Non-atomic AssignAdd
     xla_enable_strict_auto_jit = False,
@@ -1834,6 +1840,7 @@ distribute_py_test(
     main = "tf_function_test.py",
     tags = [
         "multi_and_single_gpu",
+	"no_rocm", #TODO Steven I Reeves fails 2gpu
     ],
     deps = [
         ":combinations",
