--- a/tensorflow/python/keras/distribute/BUILD
+++ b/tensorflow/python/keras/distribute/BUILD
@@ -303,6 +303,7 @@ distribute_py_test(
     main = "custom_training_loop_optimizer_test.py",
     tags = [
         "multi_and_single_gpu",
+	"no_rocm", #TODO Steven I Reeves fails 2gpu
     ],
     deps = [
         ":strategy_combinations",
@@ -508,6 +509,7 @@ distribute_py_test(
     main = "keras_metrics_test.py",
     tags = [
         "multi_and_single_gpu",
+	"no_rocm", #TODO Steven I Reeves fails 2gpu
     ],
     deps = [
         "//tensorflow/python:framework_ops",
