--- a/tensorflow/python/keras/layers/preprocessing/BUILD
+++ b/tensorflow/python/keras/layers/preprocessing/BUILD
@@ -381,6 +381,7 @@ distribute_py_test(
     python_version = "PY3",
     tags = [
         "multi_and_single_gpu",
+        "no_rocm", #TODO Steven I Reeves fails multiGPU
     ],
     tpu_tags = [
         "no_oss",  # b/155502591
@@ -434,6 +435,7 @@ distribute_py_test(
     shard_count = 4,
     tags = [
         "multi_and_single_gpu",
+	"no_rocm", # TODO Steven I Reeves fails MultiGPU
     ],
     tpu_tags = [
         "no_oss",
@@ -474,6 +476,7 @@ distribute_py_test(
     python_version = "PY3",
     tags = [
         "multi_and_single_gpu",
+	"no_rocm", #TODO Steven I Reeves fails MultiGPU
     ],
     deps = [
         ":discretization",
@@ -529,7 +532,7 @@ tf_py_test(
     name = "index_lookup_test",
     srcs = ["index_lookup_test.py"],
     python_version = "PY3",
-    tags = ["noasan"],  # TODO(b/183961255)
+    tags = ["noasan"], # TODO(b/183961255)
     deps = [
         ":index_lookup",
         ":preprocessing_test_utils",
@@ -549,6 +552,7 @@ distribute_py_test(
     python_version = "PY3",
     tags = [
         "multi_and_single_gpu",
+	"no_rocm", # TODO Steven I Reeves fails MultiGPU 
     ],
     tpu_tags = ["no_oss"],
     deps = [
@@ -676,6 +680,7 @@ distribute_py_test(
     python_version = "PY3",
     tags = [
         "multi_and_single_gpu",
+	"no_rocm", #TODO Steven I Reeves fails multiGPU
     ],
     tpu_tags = [
         "no_oss",  # b/155502591
