[MLIR][KernelGen] Configure maximum supported rank per kernel
Configure maximum supported rank per MLIR-generated kernel. By default, kernels
support a maximum rank of 5. `tf.SelectV2` supports a maximum rank of 8.

PiperOrigin-RevId: 377866077
Change-Id: Icaafb1684c31383ebf6476a30b5aa4f9169c6c4d

--- a/tensorflow/core/kernels/mlir_generated/BUILD
+++ b/tensorflow/core/kernels/mlir_generated/BUILD
@@ -1166,6 +1166,7 @@ gpu_kernel_library(
 
 gpu_kernel_library(
     name = "gpu_select_v2_kernels",
+    max_supported_rank = 8,
     op = "select_v2",
     tile_size = "256",
     types = [
