[MLIR][KernelGen] Add MLIR-generated `tf.DivNoNan` kernel
PiperOrigin-RevId: 377951189
Change-Id: Ic96ae2b6e6a614498a992a20a9f885188b55b395

--- a/tensorflow/core/kernels/mlir_generated/BUILD
+++ b/tensorflow/core/kernels/mlir_generated/BUILD
@@ -244,9 +244,10 @@ tf_kernel_library(
         "gpu_op_sub.cc",
         "gpu_op_zeta.cc",
     ]) + if_mlir_generated_experimental_kernels_enabled([
+        "gpu_op_div_no_nan.cc",
         "gpu_op_floor_div.cc",
-        "gpu_op_xdivy.cc",
         "gpu_op_squared_difference.cc",
+        "gpu_op_xdivy.cc",
         "gpu_op_xlogy.cc",
         "gpu_op_xlog1py.cc",
     ]),
@@ -280,9 +281,10 @@ tf_kernel_library(
         ":gpu_zeta_kernels",
         "//third_party/eigen3",
     ]) + if_mlir_generated_experimental_kernels_enabled([
+        ":gpu_div_no_nan_kernels",
         ":gpu_floor_div_kernels",
-        ":gpu_xdivy_kernels",
         ":gpu_squared_difference_kernels",
+        ":gpu_xdivy_kernels",
         ":gpu_xlogy_kernels",
         ":gpu_xlog1py_kernels",
     ]),
@@ -1412,6 +1414,18 @@ cpu_kernel_library(
     name = "cpu_tanh_kernels",
     op = "tanh",
     tile_size = "256",
+    types = [
+        "f16",
+        "f32",
+        "f64",
+    ],
+    unroll_factors = "4",
+)
+
+gpu_kernel_library(
+    name = "gpu_div_no_nan_kernels",
+    op = "div_no_nan",
+    tile_size = "1024",
     types = [
         "f16",
         "f32",
