--- a/.github/workflows/pylint-presubmit.yml
+++ b/.github/workflows/pylint-presubmit.yml
@@ -27,7 +27,7 @@ jobs:
         pip install keras_preprocessing --no-deps
     - name: Run pylint
       run: |
-        FILES=$(echo "${{ steps.get_file_changes.outputs.files}}" | tr " " "\n" | grep ".py$")
+        FILES=$(echo "${{ steps.get_file_changes.outputs.files}}" | tr " " "\n" | grep --quiet ".py$")
         echo "the files are" $FILES
         echo "$FILES" | wc -l
         pylint --rcfile=tensorflow/tools/ci_build/pylintrc $FILES
