--- a/.github/bot_config.yml
+++ b/.github/bot_config.yml
@@ -18,6 +18,7 @@ assignees:
    - tilakrayal
    - usharanipagadala
    - saikumarchalla
+   - rmothukuru
 # A list of assignees for compiler folder
 compiler_assignees:
    - joker-eph
