--- a/.github/workflows/pylint-presubmit.yml
+++ b/.github/workflows/pylint-presubmit.yml
@@ -12,7 +12,7 @@ jobs:
       id: get_file_changes
       uses: trilom/file-changes-action@v1.2.4
       with:
-        output: '\n'
+        output: ' '
     - name: Echo file changes
       run: |
         echo Changed files: ${{ steps.get_file_changes.outputs.files }}
@@ -27,6 +27,9 @@ jobs:
         pip install keras_preprocessing --no-deps
     - name: Run pylint
       run: |
-        FILES=$(echo "${{ steps.get_file_changes.outputs.files}}" | tr " " "\n" )
-        FILES=$(echo "$FILES" | grep --quiet ".py$" || { echo "No changed Python files" && exit 0 })
-        pylint --rcfile=tensorflow/tools/ci_build/pylintrc $FILES
+        echo "${{ steps.get_file_changes.outputs.files}}" | tr " " "\n" > files.txt
+        if ! grep -q ".py$" files.txt then 
+          echo "No python files changed."
+          exit 0;
+        fi
+        cat files.txt | xargs pylint --rcfile=tensorflow/tools/ci_build/pylintrc
