--- a/.github/workflows/pylint-presubmit.yml
+++ b/.github/workflows/pylint-presubmit.yml
@@ -1,35 +1,33 @@
 name: PyLint
-on: [pull_request]
+on:
+  pull_request:
+    paths: 
+      - '**.py'
 
 jobs:
   build:
-    name: Lint
+    name: PyLint
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout
+    - name: Checkout code
       uses: actions/checkout@v2
     - name: Get file changes
       id: get_file_changes
       uses: trilom/file-changes-action@v1.2.4
       with:
         output: ' '
-    - name: Echo file changes
+    - name: Report list of changed files
       run: |
         echo Changed files: ${{ steps.get_file_changes.outputs.files }}
     - name: Set up Python 3.8
       uses: actions/setup-python@v1
       with:
         python-version: 3.8
-    - name: Install dependencies
+    - name: Install Python dependencies
       run: |
         python -m pip install --upgrade pip
         pip install pylint numpy wheel
         pip install keras_preprocessing --no-deps
-    - name: Run pylint
+    - name: Run PyLint on changed files
       run: |
-        echo "${{ steps.get_file_changes.outputs.files}}" | tr " " "\n" > files.txt
-        if ! grep -q ".py$" files.txt; then 
-          echo "No python files changed."
-          exit 0
-        fi
-        grep ".py$" files.txt | xargs pylint --rcfile=tensorflow/tools/ci_build/pylintrc
+        echo "${{ steps.get_file_changes.outputs.files}}" | tr " " "\n" | grep ".py$" | xargs pylint --rcfile=tensorflow/tools/ci_build/pylintrc
