Enable use of sandboxed strategy only for linux and android builds. This addresses https://github.com/tensorflow/tensorflow/issues/47386
PiperOrigin-RevId: 378894693
Change-Id: Ib510432f7a9b65cffc08b351a7bb419b9c7df81c

--- a/.bazelrc
+++ b/.bazelrc
@@ -107,6 +107,9 @@ build --define=use_fast_cpp_protos=true
 build --define=allow_oversize_protos=true
 
 build --spawn_strategy=standalone
+build:android --spawn_strategy=sandboxed
+build:linux --spawn_strategy=sandboxed
+
 build -c opt
 
 # Make Bazel print out all options from rc files.
