unpin numpy in common

--- a/tensorflow/tools/ci_build/release/requirements_common.txt
+++ b/tensorflow/tools/ci_build/release/requirements_common.txt
@@ -6,9 +6,9 @@ absl-py ~= 0.12.0
 astunparse ~= 1.6.3
 flatbuffers ~= 2.0
 google_pasta ~= 0.2
-h5py ~= 3.1.0  # NOTE: not the latest version due to py3.6
+h5py >= 3.1.0
 keras_preprocessing ~= 1.1.2
-numpy ~= 1.19.5  # NOTE: not the latest version due to py3.6
+numpy >= 1.19.5
 opt_einsum ~= 3.3.0
 protobuf >= 3.17.1
 six ~= 1.16.0
