--- a/tensorflow/python/distribute/BUILD
+++ b/tensorflow/python/distribute/BUILD
@@ -622,6 +622,7 @@ distribute_py_test(
     shard_count = 10,
     tags = [
         "multi_and_single_gpu",
+        "no_rocm", #MultiMirroredWorker2x 
     ],
     tpu_tags = [
         "no_oss",
@@ -1013,6 +1014,7 @@ cuda_py_test(
     python_version = "PY3",
     tags = [
         "multi_and_single_gpu",
+        "no_rocm", #MultiMirroredWorker2x
     ],
     deps = [
         ":combinations",
@@ -1456,6 +1458,7 @@ distribute_py_test(
     shard_count = 5,
     tags = [
         "multi_and_single_gpu",
+        "no_rocm", #MultiMirroredWorker2x
     ],
     tpu_tags = [
         "no_oss",  # Target too big to run serially reliably.
@@ -1612,6 +1615,7 @@ distribute_py_test(
     main = "metrics_v1_test.py",
     tags = [
         "multi_and_single_gpu",
+        "no_rocm", #MultiMirroredWorker2x
     ],
     deps = [
         ":combinations",
@@ -1646,6 +1650,7 @@ cuda_py_test(
     tags = [
         "multi_and_single_gpu",
         "nomsan",  # b/154224457: Re-enable when fixed.
+        "no_rocm", #MultiMirroredWorker2x Re-enable when fixed
     ],
     # b/155301154 broken with XLA:GPU
     xla_enable_strict_auto_jit = True,
@@ -1689,6 +1694,7 @@ cuda_py_test(
     python_version = "PY3",
     tags = [
         "multi_and_single_gpu",
+        "no_rocm", #MultiMirroredWorker2x Re-enable when fixed. 
     ],
     # b/141096229: Non-atomic AssignAdd
     xla_enable_strict_auto_jit = False,
@@ -1876,6 +1882,7 @@ distribute_py_test(
     main = "tf_function_test.py",
     tags = [
         "multi_and_single_gpu",
+        "no_rocm", #MultiMirroredWorker2x
     ],
     deps = [
         ":combinations",
