--- a/tensorflow/python/keras/layers/preprocessing/BUILD
+++ b/tensorflow/python/keras/layers/preprocessing/BUILD
@@ -382,7 +382,7 @@ distribute_py_test(
     python_version = "PY3",
     tags = [
         "multi_and_single_gpu",
-        "no_rocm", #MultiMirroredWorker2x
+        "no_rocm", 
         "no_oss",  # b/189866692
         "noguitar",  # b/190034522
     ],
@@ -438,7 +438,7 @@ distribute_py_test(
     shard_count = 4,
     tags = [
         "multi_and_single_gpu",
-        "no_rocm", #MultiMirroredWorker2x
+        "no_rocm", 
     ],
     tpu_tags = [
         "no_oss",
@@ -479,7 +479,7 @@ distribute_py_test(
     python_version = "PY3",
     tags = [
         "multi_and_single_gpu",
-        "no_rocm", #MultiMirroredWorker2x
+        "no_rocm", 
         "no_oss",  # TODO(b/189956080)
         "noguitar",  # b/190034522
     ],
@@ -557,7 +557,7 @@ distribute_py_test(
     python_version = "PY3",
     tags = [
         "multi_and_single_gpu",
-        "no_rocm", #MultiMirroredWorker2x
+        "no_rocm", 
     ],
     tpu_tags = ["no_oss"],
     deps = [
@@ -688,7 +688,7 @@ distribute_py_test(
     python_version = "PY3",
     tags = [
         "multi_and_single_gpu",
-        "no_rocm", #MultiMirroredWorker2x
+        "no_rocm", 
     ],
     tpu_tags = [
         "no_oss",  # b/155502591
