--- a/tensorflow/core/common_runtime/eager/BUILD
+++ b/tensorflow/core/common_runtime/eager/BUILD
@@ -4,7 +4,6 @@ load(
     "//tensorflow:tensorflow.bzl",
     "tf_cc_test",
     "tf_cc_test_mkl",
-    "tf_copts",
     "tf_cuda_library",
     "tf_mkl_kernel_library",
 )
@@ -488,8 +487,9 @@ cc_library(
     hdrs = [
         "execute.h",
         "execute_node.h",
-    ] + if_mkl(["//tensorflow/core/graph:mkl_graph_util_header"]),
-    copts = if_mkl(["-DINTEL_MKL"]),
+        "//tensorflow/core/graph:mkl_graph_util_header",
+    ],
+    copts = ["-DINTEL_MKL"],
     deps = [
         ":context",
         ":copy_to_device_node",
@@ -612,7 +612,7 @@ cc_library(
         "execute.h",
         "execute_node.h",
     ],
-    copts = tf_copts(),
+    copts = ["-DINTEL_MKL"],
     deps = [
         ":context",
         ":copy_to_device_node",
