--- a/tensorflow/core/common_runtime/eager/BUILD
+++ b/tensorflow/core/common_runtime/eager/BUILD
@@ -4,6 +4,7 @@ load(
     "//tensorflow:tensorflow.bzl",
     "tf_cc_test",
     "tf_cc_test_mkl",
+    "tf_copts",
     "tf_cuda_library",
     "tf_mkl_kernel_library",
 )
@@ -487,9 +488,8 @@ cc_library(
     hdrs = [
         "execute.h",
         "execute_node.h",
-        "//tensorflow/core/graph:mkl_graph_util_header",
-    ],
-    copts = ["-DINTEL_MKL"],
+    ] + if_mkl(["//tensorflow/core/graph:mkl_graph_util_header"]),
+    copts = if_mkl(["-DINTEL_MKL"]),
     deps = [
         ":context",
         ":copy_to_device_node",
@@ -612,7 +612,7 @@ cc_library(
         "execute.h",
         "execute_node.h",
     ],
-    copts = ["-DINTEL_MKL"],
+    copts = tf_copts(),
     deps = [
         ":context",
         ":copy_to_device_node",
