Disable ppc64le custom gemm_pack_rhs to use the convolution specialization
Eigen ppc64le has a gemm_pack_rhs specialization for AltiVec architecture.
TF Convolution also specializes this packing routine, improving the Tensor
code and avoiding a lot of index computation. Based on eigen_benchmark_cpu_test,
we found a good scenario for ppc64le, where gemm_pack_rhs from TF headers
together with VSX/MMA from ppc64le speeds up the performance of convolution.

This patch fixes the column computation for convolution in case of ppc64le
and disables the Eigen ppc64le gemm_pack_rhs using the define
EIGEN_ALTIVEC_USE_CUSTOM_PACK=0

--- a/tensorflow/core/kernels/BUILD
+++ b/tensorflow/core/kernels/BUILD
@@ -942,6 +942,9 @@ cc_library(
         "eigen_convolution_helpers.h",
     ],
     compatible_with = get_compatible_with_portable(),
+    defines = [
+        "EIGEN_ALTIVEC_USE_CUSTOM_PACK=0",
+    ],
 )
 
 # OpKernel libraries ----------------------------------------------------------
