fix dependency problems

--- a/tensorflow/compiler/mlir/hlo/BUILD
+++ b/tensorflow/compiler/mlir/hlo/BUILD
@@ -952,6 +952,9 @@ cc_library(
     deps = [
         ":hlo",
         ":pass_details",
+        "@llvm-project//mlir:IR",
+        "@llvm-project//mlir:MemRefDialect",
+        "@llvm-project//mlir:TensorDialect",
     ],
 )
 
