1. rename kHloPlaceAssignment to kDiscPlaceAssignment; 2. rename host to cpu and rename device to gpu. 3. refine code 4. add on_gpu argument

--- a/tensorflow/compiler/mlir/hlo/BUILD
+++ b/tensorflow/compiler/mlir/hlo/BUILD
@@ -913,6 +913,7 @@ cc_library(
     deps = [
         ":hlo",
         ":mhlo_disc",
+        ":pass_details",
         "@com_google_absl//absl/memory",
         "@llvm-project//llvm:Support",
         "@llvm-project//mlir:IR",
