--- a/tensorflow/core/util/BUILD
+++ b/tensorflow/core/util/BUILD
@@ -645,6 +645,7 @@ tf_kernel_library(
         "//tensorflow/stream_executor/rocm:rocblas_plugin",
         "//tensorflow/stream_executor/rocm:rocblas_wrapper",
         "//tensorflow/stream_executor/rocm:rocm_gpu_executor",
+        "//tensorflow/stream_executor/rocm:rocsolver_wrapper",
     ] + if_rocm([
         "@local_config_rocm//rocm:rocprim",
     ]),
