Support per-channel quantized INT8 weights unpacking in XNNPACK delegate

--- a/tensorflow/lite/delegates/xnnpack/BUILD
+++ b/tensorflow/lite/delegates/xnnpack/BUILD
@@ -74,6 +74,7 @@ cc_library(
     hdrs = ["quantization_util.h"],
     deps = [
         "//tensorflow/lite/kernels/internal:optimized_base",
+        "//tensorflow/lite/kernels/internal:reference_base",
         "//tensorflow/lite/kernels/internal:types",
         "@FP16",
     ],
