Add evaluation tools to cmake build
- Add CMake configuration for evaluation tools.
- Add TFLITE_EVAL_TOOLS CMake option.
- Add CMake configurations for native tools to generate them in a separate CMake run using the host toolchain: `flatc` compiler for unit tests, `protoc` compiler for evaluation tools.
- Update docs.

--- a/tensorflow/lite/CMakeLists.txt
+++ b/tensorflow/lite/CMakeLists.txt
@@ -75,11 +75,20 @@ option(TFLITE_ENABLE_XNNPACK "Enable XNNPACK backend" ON)
 option(TFLITE_ENABLE_EXTERNAL_DELEGATE "Enable External Delegate backend" ON)
 
 option(TFLITE_KERNEL_TEST "Enable tflite kernel unit test" OFF)
-if(TFLITE_KERNEL_TEST AND ${CMAKE_CROSSCOMPILING})
+option(TFLITE_EVAL_TOOLS "Enable tflite eval tools compilation" OFF)
+
+if(${CMAKE_CROSSCOMPILING})
   set(TFLITE_HOST_TOOLS_DIR "" CACHE PATH "Host tools directory")
-  if(TFLITE_HOST_TOOLS_DIR STREQUAL "")
-    message(FATAL_ERROR "Path to the natively compiled 'flatc' compiler binary has not been provided!\
-                        Please specify it using -DTFLITE_HOST_TOOLS_DIR=<flatc_dir_path> launch argument.")
+  macro(report_error MISSING_COMPILER)
+    message(FATAL_ERROR "Path to the natively compiled '${MISSING_COMPILER}' compiler binary has not been provided!\
+    Please specify it using -DTFLITE_HOST_TOOLS_DIR=<host_tools_dir> launch argument.")
+  endmacro()
+
+  if(TFLITE_KERNEL_TEST AND TFLITE_HOST_TOOLS_DIR STREQUAL "")
+    report_error("flatc")
+  endif()
+  if(TFLITE_EVAL_TOOLS AND TFLITE_HOST_TOOLS_DIR STREQUAL "")
+    report_error("protoc")
   endif()
 endif()
 
@@ -704,6 +713,11 @@ endif()
 if(TFLITE_KERNEL_TEST)
   enable_testing()
   add_subdirectory(${TFLITE_SOURCE_DIR}/kernels)
+endif()
+
+# Tensorflow Lite Evaluation Tools
+if(TFLITE_EVAL_TOOLS)
+  add_subdirectory(${TFLITE_SOURCE_DIR}/tools/evaluation)
 endif()
 
 # The benchmark tool.
