Ensure tf.Tensor math operator overrides are always registered.
PiperOrigin-RevId: 589268294

--- a/tensorflow/python/framework/BUILD
+++ b/tensorflow/python/framework/BUILD
@@ -710,6 +710,23 @@ py_strict_library(
     ],
 )
 
+py_strict_library(
+    name = "override_binary_operator",
+    srcs = ["override_binary_operator.py"],
+    srcs_version = "PY3",
+    deps = [
+        ":dtypes",
+        ":ops",
+        ":tensor",
+        ":tensor_shape",
+        "//tensorflow/python/ops:math_ops_gen",
+        "//tensorflow/python/ops/numpy_ops:np_dtypes",
+        "//tensorflow/python/util:nest",
+        "//tensorflow/python/util:traceback_utils",
+        "//third_party/py/numpy",
+    ],
+)
+
 cc_library(
     name = "py_context_manager",
     srcs = ["py_context_manager.cc"],
@@ -1586,6 +1603,7 @@ py_strict_library(
         ":constant_op",
         ":dtypes",
         ":ops",
+        ":override_binary_operator",
         ":tensor",
         ":tensor_shape",
         ":tensor_spec",
@@ -1596,6 +1614,7 @@ py_strict_library(
         "//tensorflow/python:pywrap_tensorflow",
         "//tensorflow/python:tf2",
         "//tensorflow/python/ops:array_ops_stack",
+        "//tensorflow/python/ops:math_ops_gen",
         "//tensorflow/python/ops:sparse_ops_gen",
         "//tensorflow/python/saved_model:nested_structure_coder",
         "//tensorflow/python/types:internal",
