Factor out `AssignIdsToCustomAggregatorOps`.
Implements `AssignIdsToCustomAggregatorOps` in cpp, replicating the python implementation of `assign_ids_to_custom_aggregator_ops`.
Accordingly, this change removes `assign_ids_to_custom_aggregator_ops` from `py_function_lib`.

PiperOrigin-RevId: 589349801

--- a/tensorflow/compiler/mlir/quantization/stablehlo/cc/calibration/BUILD
+++ b/tensorflow/compiler/mlir/quantization/stablehlo/cc/calibration/BUILD
@@ -1,3 +1,4 @@
+load("//tensorflow:tensorflow.bzl", "tf_cc_test")
 load("//tensorflow:tensorflow.default.bzl", "get_compatible_with_portable")
 
 package(
@@ -31,5 +32,30 @@ cc_library(
         "//tensorflow/core:protos_all_cc",
         "@com_google_absl//absl/status",
         "@com_google_absl//absl/strings:str_format",
+    ],
+)
+
+cc_library(
+    name = "assign_ids",
+    srcs = ["assign_ids.cc"],
+    hdrs = ["assign_ids.h"],
+    compatible_with = get_compatible_with_portable(),
+    deps = [
+        "//tensorflow/compiler/mlir/quantization/stablehlo/cc:graph_def",
+        "//tensorflow/compiler/mlir/quantization/tensorflow/calibrator:calibrator_singleton",
+        "//tensorflow/core:protos_all_cc",
+        "@com_google_absl//absl/strings",
+    ],
+)
+
+tf_cc_test(
+    name = "assign_ids_test",
+    srcs = ["assign_ids_test.cc"],
+    deps = [
+        ":assign_ids",
+        "//tensorflow/compiler/mlir/quantization/tensorflow/calibrator:calibrator_singleton_impl",
+        "//tensorflow/core:protos_all_cc",
+        "@com_google_googletest//:gtest_main",
+        "@local_tsl//tsl/platform:protobuf",
     ],
 )
